manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cynk8stest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cynk8stest
  template:
    metadata:
      labels:
        app: cynk8stest
    spec:
      containers:
        - name: cynk8stest
          image: docker.pkg.github.com/bitcynth/cynk8stest/main:latest
          ports:
            - containerPort: 8080
              protocol: TCP
